# DesignPatterns

./: .clang-format  .gitignore  CMakeLists.txt  README.md  abstract__factory_8h_source.html  annotated.html  builder_8h_source.html  catch_8hpp_source.html  classArchitect-members.html  classArchitect.html  classArchitect__inherit__graph.dot  classBox-members.html  classBox.html  classBox__coll__graph.dot  classCar-members.html  classCar.html  classCar__inherit__graph.dot  classCat-members.html  classCat.html  classCatBoxComponent-members.html  classCatBoxComponent.html  classCatBoxComponent__inherit__graph.dot  classCat__inherit__graph.dot  classCatch_1_1AssertionHandler-members.html  classCatch_1_1AssertionHandler.html  classCatch_1_1BinaryExpr-members.html  classCatch_1_1BinaryExpr.html  classCatch_1_1Capturer-members.html  classCatch_1_1Capturer.html  classCatch_1_1Detail_1_1Approx-members.html  classCatch_1_1Detail_1_1Approx.html  classCatch_1_1Detail_1_1IsStreamInsertable-members.html  classCatch_1_1Detail_1_1IsStreamInsertable.html  classCatch_1_1ExceptionTranslatorRegistrar-members.html  classCatch_1_1ExceptionTranslatorRegistrar.html  classCatch_1_1ExprLhs-members.html  classCatch_1_1ExprLhs.html  classCatch_1_1GeneratorException-members.html  classCatch_1_1GeneratorException.html  classCatch_1_1Generators_1_1ChunkGenerator-members.html  (+329 more)
docs/: dconfig
html/: index.html  md_README.html
latex/: md_README.tex  refman.tex
test/: CMakeLists.txt  abstract_factory_test.cpp  builder_test.cpp  composite_test.cpp  first_test.cpp  prototype_test.cpp  second_test.cpp
(+54 files in other folders)
